cbits/qlInstrument.h

  QlStrikedTypePayoff* qlAssetOrNothingPayoff(int type, double strike, char **e);
  QlBasketPayoff* qlAverageBasketPayoff(QlPayoff* p, unsigned n, char **e);
  QlBasketPayoff* qlAverageBasketPayoff1(QlPayoff* p, unsigned aLen, double* a, char **e);
  QlStrikedTypePayoff* qlCashOrNothingPayoff(int type, double strike, double cashPayoff, char **e);
  QlPayoff* qlDoubleStickyRatchetPayoff(double type1, double type2, double gearing1, double gearing2, double gearing3, double spread1, double spread2, double spread3, double initialValue1, double initialValue2, double accrualFactor, char **e);
  QlTypePayoff* qlFloatingTypePayoff(int type, char **e);
  QlPayoff* qlForwardTypePayoff(int type, double strike, char **e);
  QlStrikedTypePayoff* qlGapPayoff(int type, double strike, double secondStrike, char **e);
  QlBasketPayoff* qlMaxBasketPayoff(QlPayoff* p, char **e);
  QlBasketPayoff* qlMinBasketPayoff(QlPayoff* p, char **e);
  QlPercentageStrikePayoff* qlPercentageStrikePayoff(int type, double moneyness, char **e);
  QlPlainVanillaPayoff* qlPlainVanillaPayoff(int type, double strike, char **e);
  QlPayoff* qlRatchetMaxPayoff(double gearing1, double gearing2, double gearing3, double spread1, double spread2, double spread3, double initialValue1, double initialValue2, double accrualFactor, char **e);
  QlPayoff* qlRatchetMinPayoff(double gearing1, double gearing2, double gearing3, double spread1, double spread2, double spread3, double initialValue1, double initialValue2, double accrualFactor, char **e);
  QlPayoff* qlRatchetPayoff(double gearing1, double gearing2, double spread1, double spread2, double initialValue, double accrualFactor, char **e);
  QlBasketPayoff* qlSpreadBasketPayoff(QlPayoff* p, char **e);
  QlPayoff* qlStickyMaxPayoff(double gearing1, double gearing2, double gearing3, double spread1, double spread2, double spread3, double initialValue1, double initialValue2, double accrualFactor, char **e);
  QlPayoff* qlStickyMinPayoff(double gearing1, double gearing2, double gearing3, double spread1, double spread2, double spread3, double initialValue1, double initialValue2, double accrualFactor, char **e);
  QlPayoff* qlStickyPayoff(double gearing1, double gearing2, double spread1, double spread2, double initialValue, double accrualFactor, char **e);
  QlStrikedTypePayoff* qlSuperFundPayoff(double strike, double secondStrike, char **e);
  QlStrikedTypePayoff* qlSuperSharePayoff(double strike, double secondStrike, double cashPayoff, char **e);
  QlCallability* qlCallability(double price, int priceType, int type, int date, char **e);
  QlCallability* qlSoftCallability(double price, int priceType, int date, double trigger, char **e);